Add images folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,51 @@
 </head>
 
 <body>
-    <h1 class="text-3xl bg-green-300">SImple hello</h1>
+    <!--Global Container-->
+    <main class="min-h-screen border-2 border-red-600 grid" style="grid-template-columns: 20% 80%;">
+        <!--Dashboard & Nav container-->
+        <section class="border-2 border-red-600 col-start-1 col-end-2 bg-blue-400">
+            <!--Logo container-->
+            <div>
+
+            </div>
+            <!--Nav container-->
+            <nav>
+
+            </nav>
+            <!--Setting container-->
+            <div>
+
+            </div>
+        </section>
+        <div class="border-2 border-green-600 col-start-2 col-end-3">
+            <!--Search & Features container-->
+            <section>
+                <!--Search & Account noti container-->
+                <div>
+                    <!--Search container-->
+                    <div></div>
+                    <!--Account noti container-->
+                    <div></div>
+                </div>
+            </section>
+            <!--Posters container-->
+            <section>
+                <!--Project posters container-->
+                <div>
+                    <!--heading/title-->
+                    <h3></h3>
+                    <!--Poster container-->
+                    <div></div>
+                </div>
+                <!--Announcements container-->
+                <div>
+                    <!--Content container-->
+                    <div></div>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 
 </html>
