--- a/index.html
+++ b/index.html
@@ -13,14 +13,38 @@
     <!--Global Container-->
     <main class="min-h-screen border-2 border-red-600 grid" style="grid-template-columns: 20% 80%;">
         <!--Dashboard & Nav container-->
-        <section class="border-2 border-red-600 col-start-1 col-end-2 bg-blue-400">
+        <section class="border-2 border-red-600 col-start-1 col-end-2 bg-blue-400 space-y-10">
             <!--Logo container-->
-            <div>
-
+            <div class="text-white flex flex-row items-center space-x-2 ml-5 mt-2 font-bold text-2xl">
+                <img src="Images/icons8-magento-48.png" alt="logo-img" class="w-16 h-16" />
+                <h1 class="font-bold text-2xl">Dashboard</h1>
             </div>
             <!--Nav container-->
-            <nav>
-
+            <nav class="border border-red-600 ml-5 space-y-5">
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-home-48.png" alt="" class="w-10 h-10" />
+                    <span>Home</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-head-profile-48.png" alt="" class="w-10 h-10" />
+                    <span>Profile</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-message-48.png" alt="" class="w-10 h-10" />
+                    <span>Message</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-history-48.png" alt="" class="w-10 h-10" />
+                    <span>History</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-task-48.png" alt="" class="w-10 h-10" />
+                    <span>Tasks</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-users-48.png" alt="" class="w-10 h-10" />
+                    <span>Communities</span>
+                </div>
             </nav>
             <!--Setting container-->
             <div>
