--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
     <!--Global Container-->
-    <main class="min-h-screen border-2 border-red-600 grid" style="grid-template-columns: 20% 80%;">
+    <main class="min-h-screen grid" style="grid-template-columns: 20% 80%;">
         <!--Dashboard & Nav container-->
-        <section class="border-2 border-red-600 col-start-1 col-end-2 bg-blue-400 space-y-10">
+        <section class="col-start-1 col-end-2 bg-blue-400 space-y-16">
             <!--Logo container-->
             <div class="text-white flex flex-row items-center space-x-2 ml-5 mt-2 font-bold text-2xl">
                 <img src="Images/icons8-magento-48.png" alt="logo-img" class="w-16 h-16" />
                 <h1 class="font-bold text-2xl">Dashboard</h1>
             </div>
             <!--Nav container-->
-            <nav class="border border-red-600 ml-5 space-y-5">
+            <nav class="ml-5 space-y-5">
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
                     <img src="Images/icons8-home-48.png" alt="" class="w-10 h-10" />
                     <span>Home</span>
@@ -47,8 +47,19 @@
                 </div>
             </nav>
             <!--Setting container-->
-            <div>
-
+            <div class="ml-5 space-y-5">
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-settings-48.png" alt="" class="w-10 h-10" />
+                    <span>Settings</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-online-support-48.png" alt="" class="w-10 h-10" />
+                    <span>Support</span>
+                </div>
+                <div class="flex items-center space-x-3 text-white font-bold text-xl">
+                    <img src="Images/icons8-privacy-48.png" alt="" class="w-10 h-10" />
+                    <span>Privacy</span>
+                </div>
             </div>
         </section>
         <div class="border-2 border-green-600 col-start-2 col-end-3">
