Add avatar and name

--- a/index.html
+++ b/index.html
@@ -76,19 +76,24 @@
                         <input type="text" class="bg-gray-400 rounded-full h-12 w-[80%]">
                     </div>
                     <!--Account noti container-->
-                    <div class="border border-red-600 flex items-center gap-x-5 justify-between w-[30%]">
+                    <div class="border border-red-600 flex items-center justify-around w-[20%]">
                         <img src="Images/icons8-bell-48.png" alt="noti" class="w-10 h-10" />
                         <img src="Images/icons8-avatar-80.png" alt="avatar" class="w-12 h-12" />
                         <h3 class="font-bold text-3xl">Ton Nguyen</h3>
                     </div>
                 </div>
+                <!--Features container-->
                 <div class="mx-10 my-5 border border-blue-600">
-                    <div>
+                    <!--Introduction container-->
+                    <div class="flex items-center border border-red-600">
                         <img src="Images/icons8-avatar-80.png" alt="">
                         <div>
-                            <h5>Hi, there</h5>
-                            <h3>Ton Nguyen (@gmail)</h3>
+                            <h5 class="font-bold text-sm">Hi, there</h5>
+                            <h3 class="font-bold text-xl">Ton Nguyen (@gmail)</h3>
                         </div>
+                    </div>
+                    <div>
+
                     </div>
                 </div>
             </section>
