--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 </div>
             </div>
         </section>
-        <div class="col-start-2 col-end-3 grid" style="grid-template-rows: 20% 80%;">
+        <div class="col-start-2 col-end-3 grid bg-gray-100" style="grid-template-rows: 20% 80%;">
             <!--Search & Features container-->
-            <section class="row-start-1 row-end-2">
+            <section class="row-start-1 row-end-2 bg-white shadow-xl flex flex-col justify-center">
                 <!--Search & Account noti container-->
-                <div class="mx-10 my-5 border border-green-600 flex justify-between">
+                <div class="mx-10 my-5 flex justify-between">
                     <!--Search container-->
-                    <div class="flex items-center gap-x-5 border border-blue-500 w-[70%]">
+                    <div class="flex items-center gap-x-5 w-[70%]">
                         <!--Search Bar-->
                         <button>
                             <img src="Images/icons8-search.svg" alt="" class="w-10 h-10">
@@ -76,29 +76,35 @@
                         <input type="text" class="bg-gray-400 rounded-full h-12 w-[80%]">
                     </div>
                     <!--Account noti container-->
-                    <div class="border border-red-600 flex items-center justify-around w-[20%]">
+                    <div class="flex items-center justify-around w-[20%]">
                         <img src="Images/icons8-bell-48.png" alt="noti" class="w-10 h-10" />
                         <img src="Images/icons8-avatar-80.png" alt="avatar" class="w-12 h-12" />
                         <h3 class="font-bold text-3xl">Ton Nguyen</h3>
                     </div>
                 </div>
-                <!--Features container-->
-                <div class="mx-10 my-5 border border-blue-600">
+                <!--Features Section-->
+                <div class="mx-10 my-5 flex justify-between items-center">
                     <!--Introduction container-->
-                    <div class="flex items-center border border-red-600">
+                    <div class="flex items-center">
                         <img src="Images/icons8-avatar-80.png" alt="">
                         <div>
                             <h5 class="font-bold text-sm">Hi, there</h5>
                             <h3 class="font-bold text-xl">Ton Nguyen (@gmail)</h3>
                         </div>
                     </div>
-                    <div>
-
+                    <!--Features container-->
+                    <div class="space-x-28 flex">
+                        <button
+                            class="px-6 py-1 bg-blue-600 border border-blue-600 rounded-xl text-white font-bold text-sm">New</button>
+                        <button
+                            class="px-6 py-1 bg-blue-600 border border-blue-600 rounded-xl text-white font-bold text-sm">Upload</button>
+                        <button
+                            class="px-6 py-1 bg-blue-600 border border-blue-600 rounded-xl text-white font-bold text-sm">Share</button>
                     </div>
                 </div>
             </section>
             <!--Posters container-->
-            <section class="row-start-2 row-end-3 border-4 border-red-600">
+            <section class="row-start-2 row-end-3">
                 <!--Project posters container-->
                 <div>
                     <!--heading/title-->
