Add comments to project/announcement section

--- a/index.html
+++ b/index.html
@@ -103,19 +103,35 @@
                     </div>
                 </div>
             </section>
-            <!--Posters container-->
+            <!--Project/Announcement/Trending Section-->
             <section class="row-start-2 row-end-3">
-                <!--Project posters container-->
+                <!--Project section-->
                 <div>
-                    <!--heading/title-->
-                    <h2></h2>
+                    <!--heading/title container-->
+                    <div>
+                        <h2></h2>
+                    </div>
                     <!--Poster container-->
                     <div></div>
                 </div>
-                <!--Announcements container-->
+                <!--Announcements/Trending Section-->
                 <div>
-                    <!--Content container-->
+                    <!--heading/title container-->
                     <div></div>
+                    <!-- Announcement/Trending container -->
+                    <div>
+                        <!-- Announcement container -->
+                        <div></div>
+                        <!-- Trending container -->
+                        <div>
+                            <!-- Heading -->
+                            <h2></h2>
+                            <!-- Trending content container-->
+                            <div>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
