Add structure to poster container

--- a/index.html
+++ b/index.html
@@ -104,18 +104,24 @@
                 </div>
             </section>
             <!--Project/Announcement/Trending Section-->
-            <section class="row-start-2 row-end-3">
+            <section class="row-start-2 row-end-3 grid" style="grid-template-columns: 80% 20%;">
                 <!--Project section-->
-                <div>
+                <div class="border border-red-600 p-4">
                     <!--heading/title container-->
                     <div>
-                        <h2></h2>
+                        <h2>Your Projects</h2>
                     </div>
                     <!--Poster container-->
-                    <div></div>
+                    <div class="border border-red-600">
+                        <div>
+                            <h4>Super Cool Project</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, voluptatibus!</p>
+                            <div></div>
+                        </div>
+                    </div>
                 </div>
                 <!--Announcements/Trending Section-->
-                <div>
+                <div class="border border-purple-600">
                     <!--heading/title container-->
                     <div></div>
                     <!-- Announcement/Trending container -->
@@ -124,8 +130,10 @@
                         <div></div>
                         <!-- Trending container -->
                         <div>
-                            <!-- Heading -->
-                            <h2></h2>
+                            <!-- Heading container-->
+                            <div>
+                                <h2></h2>
+                            </div>
                             <!-- Trending content container-->
                             <div>
 
