Edit the search bar / add a placeholder

--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
                         <button>
                             <img src="Images/icons8-search.svg" alt="" class="w-10 h-10">
                         </button>
-                        <input type="text" class="bg-gray-400 rounded-full h-12 w-[80%]">
+                        <input type="text"
+                            class="bg-gray-400 rounded-full h-12 w-[80%] px-5 text-gray-200 placeholder-gray-200"
+                            placeholder="What on your mind?">
                     </div>
                     <!--Account noti container-->
-                    <div class="flex items-center justify-around w-[20%]">
+                    <div class="flex items-center justify-around w-[20%] space-x-8">
                         <img src="Images/icons8-bell-48.png" alt="noti" class="w-10 h-10" />
                         <img src="Images/icons8-avatar-80.png" alt="avatar" class="w-12 h-12" />
                         <h3 class="font-bold text-3xl">Ton Nguyen</h3>
@@ -104,7 +106,7 @@
                 </div>
             </section>
             <!--Project/Announcement/Trending Section-->
-            <section class="row-start-2 row-end-3 grid" style="grid-template-columns: 80% 20%;">
+            <section class="row-start-2 row-end-3 grid" style="grid-template-columns: 70% 30%;">
                 <!--Project section-->
                 <div class="border border-red-600 p-4">
                     <!--heading/title container-->
@@ -112,11 +114,13 @@
                         <h2>Your Projects</h2>
                     </div>
                     <!--Poster container-->
-                    <div class="border border-red-600">
-                        <div>
-                            <h4>Super Cool Project</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, voluptatibus!</p>
-                            <div></div>
+                    <div>
+                        <div class="border border-red-600">
+                            <div>
+                                <h4>Super Cool Project</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, voluptatibus!</p>
+                                <div></div>
+                            </div>
                         </div>
                     </div>
                 </div>
