Finish up project section

--- a/index.html
+++ b/index.html
@@ -111,15 +111,74 @@
                 <div class="border border-red-600 p-4">
                     <!--heading/title container-->
                     <div>
-                        <h2>Your Projects</h2>
+                        <h2 class="font-bold text-lg py-4">Your Projects</h2>
                     </div>
                     <!--Poster container-->
-                    <div>
-                        <div class="border border-red-600">
-                            <div>
-                                <h4>Super Cool Project</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, voluptatibus!</p>
-                                <div></div>
+                    <div class="flex justify-evenly">
+                        <!-- Left side poster container -->
+                        <div class="flex flex-col space-y-20">
+                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                                <h4 class="text-md font-bold">Super Cool Project</h4>
+                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Tempora, voluptatibus!</p>
+                                <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
+                                    <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
+                                </div>
+                            </div>
+                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                                <h4 class="text-md font-bold">Super Cool Project</h4>
+                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Tempora, voluptatibus!</p>
+                                <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
+                                    <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
+                                </div>
+                            </div>
+                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                                <h4 class="text-md font-bold">Super Cool Project</h4>
+                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Tempora, voluptatibus!</p>
+                                <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
+                                    <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Right side poster container -->
+                        <div class="flex flex-col space-y-20">
+                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                                <h4 class="text-md font-bold">Super Cool Project</h4>
+                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Tempora, voluptatibus!</p>
+                                <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
+                                    <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
+                                </div>
+                            </div>
+                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                                <h4 class="text-md font-bold">Super Cool Project</h4>
+                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Tempora, voluptatibus!</p>
+                                <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
+                                    <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
+                                </div>
+                            </div>
+                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                                <h4 class="text-md font-bold">Super Cool Project</h4>
+                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit. Tempora, voluptatibus!</p>
+                                <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
+                                    <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
+                                    <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
+                                </div>
                             </div>
                         </div>
                     </div>
