Edit spacy-y-# in project section

--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
                         <!-- Left side poster container -->
                         <div class="flex flex-col space-y-20">
                             <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
-                                <h4 class="text-md font-bold">Super Cool Project</h4>
-                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Tempora, voluptatibus!</p>
+                                <div class="space-y-4">
+                                    <h4 class="text-md font-bold">Super Cool Project</h4>
+                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Tempora, voluptatibus!</p>
+                                </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
                                     <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
                                     <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
@@ -128,9 +130,11 @@
                                 </div>
                             </div>
                             <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
-                                <h4 class="text-md font-bold">Super Cool Project</h4>
-                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Tempora, voluptatibus!</p>
+                                <div class="space-y-4">
+                                    <h4 class="text-md font-bold">Super Cool Project</h4>
+                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Tempora, voluptatibus!</p>
+                                </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
                                     <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
                                     <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
@@ -138,9 +142,11 @@
                                 </div>
                             </div>
                             <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
-                                <h4 class="text-md font-bold">Super Cool Project</h4>
-                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Tempora, voluptatibus!</p>
+                                <div class="space-y-4">
+                                    <h4 class="text-md font-bold">Super Cool Project</h4>
+                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Tempora, voluptatibus!</p>
+                                </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
                                     <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
                                     <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
@@ -151,9 +157,11 @@
                         <!-- Right side poster container -->
                         <div class="flex flex-col space-y-20">
                             <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
-                                <h4 class="text-md font-bold">Super Cool Project</h4>
-                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Tempora, voluptatibus!</p>
+                                <div class="space-y-4">
+                                    <h4 class="text-md font-bold">Super Cool Project</h4>
+                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Tempora, voluptatibus!</p>
+                                </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
                                     <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
                                     <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
@@ -161,9 +169,11 @@
                                 </div>
                             </div>
                             <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
-                                <h4 class="text-md font-bold">Super Cool Project</h4>
-                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Tempora, voluptatibus!</p>
+                                <div class="space-y-4">
+                                    <h4 class="text-md font-bold">Super Cool Project</h4>
+                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Tempora, voluptatibus!</p>
+                                </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
                                     <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
                                     <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
@@ -171,9 +181,11 @@
                                 </div>
                             </div>
                             <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
-                                <h4 class="text-md font-bold">Super Cool Project</h4>
-                                <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Tempora, voluptatibus!</p>
+                                <div class="space-y-4">
+                                    <h4 class="text-md font-bold">Super Cool Project</h4>
+                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                        elit. Tempora, voluptatibus!</p>
+                                </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
                                     <img src="Images/icons8-like-96.png" alt="" class="w-6 h-6" />
                                     <img src="Images/icons8-seen-96.png" alt="" class="w-6 h-6" />
