Add background and border to avatar

--- a/index.html
+++ b/index.html
@@ -22,42 +22,42 @@
             <!--Nav container-->
             <nav class="ml-5 space-y-5">
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-home-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-home-48.png" alt="" class="w-6 h-6" />
                     <span>Home</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-head-profile-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-head-profile-48.png" alt="" class="w-6 h-6" />
                     <span>Profile</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-message-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-message-48.png" alt="" class="w-6 h-6" />
                     <span>Message</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-history-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-history-48.png" alt="" class="w-6 h-6" />
                     <span>History</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-task-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-task-48.png" alt="" class="w-6 h-6" />
                     <span>Tasks</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-users-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-users-48.png" alt="" class="w-6 h-6" />
                     <span>Communities</span>
                 </div>
             </nav>
             <!--Setting container-->
             <div class="ml-5 space-y-5">
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-settings-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-settings-48.png" alt="" class="w-6 h-6" />
                     <span>Settings</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-online-support-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-online-support-48.png" alt="" class="w-6 h-6" />
                     <span>Support</span>
                 </div>
                 <div class="flex items-center space-x-3 text-white font-bold text-xl">
-                    <img src="Images/icons8-privacy-48.png" alt="" class="w-10 h-10" />
+                    <img src="Images/icons8-privacy-48.png" alt="" class="w-6 h-6" />
                     <span>Privacy</span>
                 </div>
             </div>
@@ -80,15 +80,17 @@
                     <!--Account noti container-->
                     <div class="flex items-center justify-around w-[20%] space-x-8">
                         <img src="Images/icons8-bell-48.png" alt="noti" class="w-10 h-10" />
-                        <img src="Images/icons8-avatar-80.png" alt="avatar" class="w-12 h-12" />
+                        <img src="Images/icons8-avatar-80.png" alt="avatar"
+                            class="w-12 h-12 border border-black rounded-full bg-green-500" />
                         <h3 class="font-bold text-3xl">Ton Nguyen</h3>
                     </div>
                 </div>
                 <!--Features Section-->
                 <div class="mx-10 my-5 flex justify-between items-center">
                     <!--Introduction container-->
-                    <div class="flex items-center">
-                        <img src="Images/icons8-avatar-80.png" alt="">
+                    <div class="flex items-center space-x-5">
+                        <img src="Images/icons8-avatar-80.png" alt=""
+                            class="border border-black rounded-full bg-green-500">
                         <div>
                             <h5 class="font-bold text-sm">Hi, there</h5>
                             <h3 class="font-bold text-xl">Ton Nguyen (@gmail)</h3>
@@ -108,7 +110,7 @@
             <!--Project/Announcement/Trending Section-->
             <section class="row-start-2 row-end-3 grid" style="grid-template-columns: 70% 30%;">
                 <!--Project section-->
-                <div class="border border-red-600 p-4">
+                <div class="p-4">
                     <!--heading/title container-->
                     <div>
                         <h2 class="font-bold text-lg py-4">Your Projects</h2>
@@ -117,7 +119,8 @@
                     <div class="flex justify-evenly">
                         <!-- Left side poster container -->
                         <div class="flex flex-col space-y-20">
-                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                            <div
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
                                     <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -129,7 +132,8 @@
                                     <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
                                 </div>
                             </div>
-                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                            <div
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
                                     <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -141,7 +145,8 @@
                                     <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
                                 </div>
                             </div>
-                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                            <div
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
                                     <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -156,7 +161,8 @@
                         </div>
                         <!-- Right side poster container -->
                         <div class="flex flex-col space-y-20">
-                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                            <div
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
                                     <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -168,7 +174,8 @@
                                     <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
                                 </div>
                             </div>
-                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                            <div
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
                                     <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
@@ -180,7 +187,8 @@
                                     <img src="Images/icons8-share-96.png" alt="" class="w-6 h-6" />
                                 </div>
                             </div>
-                            <div class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60">
+                            <div
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
                                     <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
