--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                         <!-- Left side poster container -->
                         <div class="flex flex-col space-y-20">
                             <div
-                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600 shadow-lg">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
-                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Tempora, voluptatibus!</p>
                                 </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
@@ -133,10 +133,10 @@
                                 </div>
                             </div>
                             <div
-                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600 shadow-lg">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
-                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Tempora, voluptatibus!</p>
                                 </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
@@ -146,10 +146,10 @@
                                 </div>
                             </div>
                             <div
-                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600 shadow-lg">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
-                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Tempora, voluptatibus!</p>
                                 </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
@@ -162,10 +162,10 @@
                         <!-- Right side poster container -->
                         <div class="flex flex-col space-y-20">
                             <div
-                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600 shadow-lg">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
-                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Tempora, voluptatibus!</p>
                                 </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
@@ -175,10 +175,10 @@
                                 </div>
                             </div>
                             <div
-                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600 shadow-lg">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
-                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Tempora, voluptatibus!</p>
                                 </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
@@ -188,10 +188,10 @@
                                 </div>
                             </div>
                             <div
-                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600">
+                                class=" relative bg-white p-8 border-l-8 border-yellow-400 rounded-xl w-80 h-60 hover:border-green-600 shadow-lg">
                                 <div class="space-y-4">
                                     <h4 class="text-md font-bold">Super Cool Project</h4>
-                                    <p class="text-sm text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    <p class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur adipisicing
                                         elit. Tempora, voluptatibus!</p>
                                 </div>
                                 <div class="absolute bottom-0 right-0 mr-5 mb-10 flex space-x-5">
@@ -204,22 +204,84 @@
                     </div>
                 </div>
                 <!--Announcements/Trending Section-->
-                <div class="border border-purple-600">
+                <div class="border border-purple-600 p-4">
                     <!--heading/title container-->
-                    <div></div>
-                    <!-- Announcement/Trending container -->
                     <div>
+                        <h2 class="font-bold text-xl py-4">Announcements</h2>
+                    </div>
+                    <!-- Announcement/Trending container -->
+                    <div class="space-y-5">
                         <!-- Announcement container -->
-                        <div></div>
+                        <div class="bg-white rounded-xl px-10 py-10 shadow-lg space-y-5">
+                            <div>
+                                <h5 class="font-bold text-lg">Site Maintenance</h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam non accusantium
+                                    perspiciatis tenetur. Possimus repellat laborum obcaecati sed voluptatibus
+                                    laudantium.</p>
+                            </div>
+                            <div class="border-b border-gray-400"></div>
+                            <div>
+                                <h5 class="font-bold text-lg">Community Share Day </h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam non accusantium
+                                    perspiciatis tenetur. Possimus repellat laborum obcaecati sed voluptatibus
+                                    laudantium.</p>
+                            </div>
+                            <div class="border-b border-gray-400"></div>
+                            <div>
+                                <h5 class="font-bold text-lg">Updated Privacy Policy </h5>
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam non accusantium
+                                    perspiciatis tenetur. Possimus repellat laborum obcaecati sed voluptatibus
+                                    laudantium.</p>
+                            </div>
+                        </div>
                         <!-- Trending container -->
                         <div>
                             <!-- Heading container-->
                             <div>
-                                <h2></h2>
+                                <h2 class="font-bold text-xl py-4">Trending</h2>
                             </div>
                             <!-- Trending content container-->
-                            <div>
-
+                            <div class="bg-white rounded-xl shadow-lg space-y-10 p-8">
+                                <div class="flex space-x-5">
+                                    <div>
+                                        <img src="Images/icons8-avatar-80.png" alt=""
+                                            class="w-12 h-12 border border-black rounded-full bg-yellow-300" />
+                                    </div>
+                                    <div class="flex flex-col text-start">
+                                        <h6>@TonNguyen</h6>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </div>
+                                <div class="flex space-x-5">
+                                    <div>
+                                        <img src="Images/icons8-avatar-80.png" alt=""
+                                            class="w-12 h-12 border border-black rounded-full bg-green-300" />
+                                    </div>
+                                    <div class="flex flex-col text-start">
+                                        <h6>@CamiPham</h6>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </div>
+                                <div class="flex space-x-5">
+                                    <div>
+                                        <img src="Images/icons8-avatar-80.png" alt=""
+                                            class="w-12 h-12 border border-black rounded-full bg-blue-300" />
+                                    </div>
+                                    <div class="flex flex-col text-start">
+                                        <h6>@TaiNguyen</h6>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </div>
+                                <div class="flex space-x-5">
+                                    <div>
+                                        <img src="Images/icons8-avatar-80.png" alt=""
+                                            class="w-12 h-12 border border-black rounded-full bg-red-300" />
+                                    </div>
+                                    <div class="flex flex-col text-start">
+                                        <h6>@ToanNguyen</h6>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
